# Task_01/api/main.go
@@ -19,12 +19,17 @@ func NewServer(h *handler.Handler) *gin.Engine {
 	r.GET("/user", h.GetAllUser)
 	r.PUT("/user/:id", h.UpdateUser)
 	r.DELETE("/user/:id", h.DeleteUser)
+	r.GET("/deleted_users", h.GetAllDeletedUser)
+
 	//Posts
 	r.POST("/post", h.CreatePost)
 	r.GET("/post/:id", h.GetPost)
 	r.GET("/post", h.GetAllPost)
 	r.PUT("/post/:id", h.UpdatePost)
-	r.DELETE("/post/:id", h.DeletePost)
+	r.DELETE("/post", h.DeletePost)
+	r.GET("/my/post/:created_by", h.GetMyPost)
+	r.GET("/deleted_posts", h.GetAllDeletedPost)
+
 	// r.DELETE("/my/posts", h.getmypost)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
